--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "calc-v2",
   "version": "0.1.0",
-  "homepage": "https://shtbik37.github.io/calc-v2/",
+  "homepage": "https://shtbik37.github.io/",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.11.4",
